--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
-    "mongodb": "^6.1.0",
+    "mongodb": "^6.2.0",
     "redis": "^4.6.10"
   },
   "devDependencies": {
