--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
+  "name": "share-and-savor",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "client:install": "npm install --prefix client",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon app.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "react-router-dom": "^6.18.0"
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
+    "redis": "^4.6.10"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
