--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "is-url": "^1.2.4",
     "mongodb": "^6.2.0",
     "redis": "^4.6.10"
   },
