--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-maps-react": "^2.0.6",
+    "is-url": "^1.2.4",
     "mongodb": "^6.2.0",
     "redis": "^4.6.10"
   },
