--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "is-url": "^1.2.4",
     "mongodb": "^6.2.0",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
