--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
     "redis": "^4.6.10"
   },
