--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "google-map-react": "^2.2.1",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
