--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-maps-react": "^2.0.6",
     "mongodb": "^6.2.0",
     "redis": "^4.6.10"
   },
