--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "google-maps-react": "^2.0.6",
     "is-url": "^1.2.4",
     "mongodb": "^6.2.0",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
