--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "client:build": "npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
