--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
 worker_processes auto;
 events {
-    worker_connections 1024;
+    worker_connections 64;
 }
 
 http {
-  upstream backend {
-      server backend:5000;
+  upstream client {
+      server client:5173;
   }
 
   server {
@@ -13,7 +13,7 @@ http {
       listen [::]:80;
       server_name localhost;
       
-      root /usr/share/nginx/frontend;
+      root /usr/share/nginx/client;
       client_max_body_size 10M;
       
       location / {
