--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "seed": "node seed.js",
-    "client:build": "npm run build --prefix client"
+    "client:build": "npm run build --prefix client",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
